doing to perform revert command

--- a/server/public/style/chatroom.scss
+++ b/server/public/style/chatroom.scss
@@ -18,11 +18,6 @@ body {
     background-color: #21242B;
 }
 
-#room-tab-in-left {
-    list-style-type: none;
-    margin: 10px;
-    border: 2px solid white;
-}
 
 .middle {
     flex-grow: 3;
@@ -44,7 +39,7 @@ body {
     justify-content: center;
 }
 
-form {
+.input-form {
     width: 95%;
     display: flex;
     justify-content: space-around;
