--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -13,7 +13,7 @@ html(lang='en')
         li
           | 1. Music: talk about Music and stuff...| Active: 13 | Admin: Sagar Babu +3
     .create-new-room-form
-      form(action='/form', method='post')
+      form(action='/Chatboard', method='post')
         input#room-name(type='text', name='roomname', placeholder='Enter room name...')
         input#room-capacity(type='text', name='roomcapacity', placeholder='Capacity')
         button#create-room-btn(type='submit') Create New
