--- a/server/views/chatroom.pug
+++ b/server/views/chatroom.pug
@@ -5,7 +5,6 @@ html(lang='en')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     link(rel='stylesheet', href='style/chatroom.css')
-    script(src="socket.io/socket.io.js") 
     title Dashboard
   body
     .left
@@ -15,7 +14,7 @@ html(lang='en')
       .room-list
         h2 Joined Rooms
         ul
-          each item in arrofRooms
+          each item in room
             form(action=item.roomTitle, method='post')#room-in-roomlist
               button(type="submit")#room-btn
                 p#room-title-in-room-list= item.roomTitle
@@ -26,13 +25,13 @@ html(lang='en')
                   span Ritik Pal
     .middle
       .room-details-top
-        p#room-title-in-middle Kaale kachhe wale
-        p#room-desc-in-middle two friends apopted kala kachha, no one was noticing them...
+        p#room-title-in-middle
+        p#room-desc-in-middle desc
       .chat-box#chat-box
-        li #{arrofRooms}
+        li #{room}
       .input-field
-        form.input-form
-          input#input-field-in-middle(type='text', placeholder='Type the message')
+        form.input-form(action='/chatmessage' method='post')
+          input#input-field-in-middle(type='text', placeholder='Type the message' name='chatmessage')
           button#attachment-btn-in-middle
             img#attachment-icon(src='/assets/attach.png')
           button#send-btn-in-middle(type='submit')
@@ -53,24 +52,48 @@ html(lang='en')
         li jetram singh
         li vasudev sharma
 
-  script.
-    var arrofRooms = JSON.parse('!{JSON.stringify(arrofRooms)}');
-    console.log(arrofRooms);
-    //- Array.from(arrofRooms).forEach((room) => {
-    //-   const socket = io(room.roomTitle);
+    script(src="socket.io/socket.io.js") 
+    script.
+        //dom manipulation here
+        const roomTitleinRoomList = document.getElementById('room-title-in-room-list');
+        const roomTitleinMiddle = document.getElementById('room-title-in-middle');
+        const inputFieldinMiddle = document.getElementById('input-field-in-middle');
+        const sendBtninMiddle = document.getElementById('send-btn-in-middle');
+        const inputForm = document.querySelector('.input-form');
+        const chatBox = document.getElementById('chat-box');
 
-    //-   socket.on('connect', (room) => {
-    //-     console.log(`A client with Namespace: ${room.roomTitle} has connected succesfully.`);
-    //-   });
+        const createRoom = (room) => {
+            roomTitleinRoomList.innerText = room;
+            roomTitleinMiddle.innerText = room;
+        }
+        createRoom(room);
 
-    //-   socket.emit('chatMessage', "vande bharat");
-    //-   console.log("vande bharat emitted from client");
-    //- });
+        
 
-    const socket = io('/pawan');
+        var room = JSON.parse('!{JSON.stringify(room)}');
+        console.log(room);
 
-      socket.on('connect', (socket) => {
-        console.log(`A client with Namespace: /pawan has connected succesfully.`);
-      });
+        const createNamespace = (room) => {
+            const socket = io(`/${room}`);
 
-      socket.emit('chatMessage', "vande bharat");
+            socket.on('connect', () => {
+                console.log(`A client with Namespace: ${room} has connected with socketId: ${socket.id}`);
+            });
+
+            sendBtninMiddle.addEventListener('click', (event) => {
+                event.preventDefault();
+                socket.emit("chatMessageForServer", inputFieldinMiddle.value);
+            });
+            inputForm.addEventListener('submit', (event) => {
+                event.preventDefault();
+                socket.emit("chatMessageForServer", inputFieldinMiddle.value);
+            });
+
+            socket.on("chatMessageForClient", (msg) => {
+                let li = document.createElement("li");
+                li.innerHTML = msg;
+                chatBox.appendChild(li);
+            });
+        }
+
+        createNamespace(room);
