--- a/server/views/chatroom.pug
+++ b/server/views/chatroom.pug
@@ -4,7 +4,7 @@ html(lang='en')
     meta(charset='UTF-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    link(rel='stylesheet', href='style/chatroom.css')
+    link(rel='stylesheet', href='/style/chatroom.css')
     title Dashboard
   body
     .left
@@ -14,19 +14,17 @@ html(lang='en')
       .room-list
         h2 Joined Rooms
         ul
-          each item in room
-            form(action=item.roomTitle, method='post')#room-in-roomlist
-              button(type="submit")#room-btn
-                p#room-title-in-room-list= item.roomTitle
-                p
-                  | Active: 
-                  span 12
-                  | , Admin: 
-                  span Ritik Pal
+          form(action=room, method='post')#room-in-roomlist
+            button(type="submit")#room-btn
+              p#room-title-in-room-list
+              p
+                | Active: 
+                span 12
+                | , Admin: 
+                span Ritik Pal
     .middle
       .room-details-top
         p#room-title-in-middle
-        p#room-desc-in-middle desc
       .chat-box#chat-box
         li #{room}
       .input-field
@@ -40,54 +38,20 @@ html(lang='en')
       h2 Active
       ul#admins-in-room-right
         h2 #Admin
-        li sagar neupane
-        li shubham pandey
+        li admin-person
+        li admin-person
       ul#non-admins-in-room-right
         h2 #Non-Admins
-        li sanjay kandel
-        li ankush kumar
-        li pawan kumar
-        li harsh tiwari
-        li ashwani yadav
-        li jetram singh
-        li vasudev sharma
+        li person
+        li person
 
-    script(src="socket.io/socket.io.js") 
+    script(src='https://cdn.socket.io/3.1.3/socket.io.min.js', integrity='sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh', crossorigin='anonymous')
     script.
-        //- async function establishConnection() {
-        //-   //dom manipulation here
-        //-   const roomTitleinRoomList = document.getElementById('room-title-in-room-list');
-        //-   const roomTitleinMiddle = document.getElementById('room-title-in-middle');
-        //-   const inputFieldinMiddle = document.getElementById('input-field-in-middle');
-        //-   const sendBtninMiddle = document.getElementById('send-btn-in-middle');
-        //-   const inputForm = document.querySelector('.input-form');
-        //-   const chatBox = document.getElementById('chat-box');
+          
+          var room = JSON.parse('!{JSON.stringify(room)}');
+          console.log(room);
 
-        //-   roomTitleinRoomList.innerText = room;
-        //-   roomTitleinMiddle.innerText = room;
-
-        //-   var room = JSON.parse('!{JSON.stringify(room)}');
-        //-   console.log(room);
-
-        //-   console.log("entered chatroom");
-        //-   const socket = io(`/${room}`, {
-        //-       transports: ['websocket'],
-        //-       //upgrade: false,
-        //-       //rejectUnauthorized: false
-        //-   });
-
-        //-   await socket.on('connect', () => {
-        //-       console.log(`connected to ${socket.id}`);
-        //-       socket.emit('event', "client connected boss");
-        //-       socket.on('event', (msg) => {
-        //-           console.log(msg);
-        //-       });
-        //-   });
-        //- } 
-
-        //- establishConnection();
-
-        //dom manipulation here
+          //dom manipulation here
           const roomTitleinRoomList = document.getElementById('room-title-in-room-list');
           const roomTitleinMiddle = document.getElementById('room-title-in-middle');
           const inputFieldinMiddle = document.getElementById('input-field-in-middle');
@@ -98,32 +62,33 @@ html(lang='en')
           roomTitleinRoomList.innerText = room;
           roomTitleinMiddle.innerText = room;
 
-          var room = JSON.parse('!{JSON.stringify(room)}');
-          console.log(room);
+          console.log("entered chatroom");
+          const socket = io(`/${room}`, {
+              transports: ['websocket', 'polling'],
+              upgrade: false,
+              rejectUnauthorized: false
+          });
 
-        const createNamespace = (room) => {
-            const socket = io(`/${room}`, {
-              transports: ['websocket']
-            });
+          socket.on('connect', () => {
+              console.log(`connected in ${room}`);
 
-            socket.on('connect', () => {
-                console.log(`A client with Namespace: ${room} has connected with socketId: ${socket.id}`);
-            });
+              sendBtninMiddle.addEventListener('click', (event) => {
+                  event.preventDefault();
+                  socket.emit("chatMessageForServer", inputFieldinMiddle.value);
+                  inputFieldinMiddle.value = "";
+              });
+              inputForm.addEventListener('submit', (event) => {
+                  event.preventDefault();
+                  socket.emit("chatMessageForServer", inputFieldinMiddle.value);
+                  inputFieldinMiddle.value = "";
+              });
+          });
 
-            sendBtninMiddle.addEventListener('click', (event) => {
-                event.preventDefault();
-                socket.emit("chatMessageForServer", inputFieldinMiddle.value);
-            });
-            inputForm.addEventListener('submit', (event) => {
-                event.preventDefault();
-                socket.emit("chatMessageForServer", inputFieldinMiddle.value);
-            });
+          socket.on("chatMessageForClient", (msg) => {
+              let li = document.createElement("li");
+              li.innerHTML = msg;
+              chatBox.appendChild(li);
+          });
 
-            socket.on("chatMessageForClient", (msg) => {
-                let li = document.createElement("li");
-                li.innerHTML = msg;
-                chatBox.appendChild(li);
-            });
-        }
 
-        createNamespace(room);
+        
