--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -12,17 +12,62 @@ html(lang='en')
         li
           | 1. Music: talk about Music and stuff...| Active: 13 | Admin: Sagar Babu +3
     .create-new-room-form
-      form(action='/chatboard', method='post')
+      form
         input#room-name(type='text', name='roomname', placeholder='Enter room name...')
         input#room-capacity(type='text', name='roomcapacity', placeholder='Capacity')
         button#create-room-btn(type='submit') Create New
 
-  //script(src="/socket.io/socket.io.js") 
-  //script.
-        console.log("entering client.js");
-        const socket = io();
+    script(src='https://cdn.socket.io/3.1.3/socket.io.min.js', integrity='sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh', crossorigin='anonymous')
+    script.
+          const createRoomBtn = document.querySelector('#create-room-btn');
+          const roomListBox = document.querySelector('.rooms-list-box');
 
-        socket.on('connect', () => {
-            console.log("connected");
-            socket.emit('event', msg);
-        });
+          createRoomBtn.addEventListener('click', (e) => {
+            e.preventDefault();
+            const room = {
+              name: document.querySelector('#room-name').value,
+              capacity: document.querySelector('#room-capacity').value
+            }
+            createNamespace(room.name);
+          });
+
+          const createNamespace = async (data) => {
+            const response = await fetch(`/namespace/create/${data}`, {
+              method: 'POST',
+              headers: {
+                'Content-Type': 'application/json'
+              }
+            });
+
+            const socket = io(`/${data}`, {
+              transports: ['websocket', 'polling'],
+              upgrade: false,
+              rejectUnauthorized: false
+            });
+
+            const result = await response.json();
+            
+            const li = document.createElement('li');
+            li.innerHTML = `
+              <form action="/namespace/join/${result.name}" method="post">
+                <button type="submit" value="${result.name} class="join-btn">${result.name}</button>
+              </form>
+            `;
+            roomListBox.appendChild(li);
+
+            const joinBtn = document.querySelector('.join-btn');
+
+            joinBtn.addEventListener('click', (e) => {
+              e.preventDefault();
+              console.log(e + " clicked");
+              const room = e.target.dataset.value;
+              console.log(room);
+
+              const xhr = new XMLHttpRequest();
+              xhr.open('POST', `/namespace/join/${room}`, true);
+              xhr.setRequestHeader('Content-Type', 'application/json');
+              xhr.send();
+            });
+          }
+
+          
