--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,7 +10,7 @@
 .app {
   width: 100%;
   height: 100vh;
-  background-image: url('./assets/bg.png');
+
 }
 
 .glass {
@@ -25,6 +25,7 @@
 .home {
   width: 100%;
   margin: 0 auto;
+  background-image: url('./assets/bg.png');
   height: 100%;
 }
 .left {
@@ -102,4 +103,191 @@
 .rocket-img {
   width: 300px;
   transform: rotateZ(-45deg);
+}
+
+/* Chat */
+.chat-section {
+  width: 100%;
+  height: 100vh;
+}
+.chat-left {
+  width: 30%;
+  height: 100%;
+  padding: 20px;
+  padding-right: 0;
+}
+.chat-middle {
+  width: 40%;
+  height: 100%;
+  padding: 20px 0;
+}
+.chat-right {
+  width: 30%;
+  height: 100%;
+  padding: 20px;
+}
+.chat-left__logo {
+  border-right: 2px solid #ececec;
+  height: 100%;
+}
+
+.chat-left__content {
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  /* background-color: #f6f6f6; */
+}
+
+.arrow-icon {
+  padding: 3px 8px;
+  border-radius: 8px;
+  background-color: #e1e1e1;
+  cursor: pointer;
+}
+
+.hr-line {
+  width: 100%;
+  margin: 0 auto;
+  border: none;
+  height: 2px;
+  background-color: #d0d0d0;
+}
+
+.switch-btn__container {
+  width: 100%;
+  background-color: #ececec;
+  border-radius: 4px;
+}
+.switch {
+  width: 50%;
+}
+.switch p {
+  cursor: pointer;
+  border: 4px;
+}
+.switch p:hover {
+  background-color: #f6f6f6;
+}
+.active-switch {
+  background-color: #f6f6f6;
+}
+
+.chat-left__utils {
+  height: 81vh;
+}
+.chat-left__utils_container {
+  width: 100%;
+  height: 100%;
+  border: 2px solid #e1e1e1;
+  border-radius: 8px;
+}
+.member-item {
+  background-color: #ececec;
+  border-radius: 8px;
+}
+
+.member-item-content p {
+  color: #7b7b7b;
+}
+.member-item__icon {
+  font-size: 7px;
+  color: #5dc26a;
+}
+
+.chat-middle__content {
+  width: 100%;
+  height: 100%;
+  background-color: #f6f6f6;
+  border-radius: 8px;
+}
+.message-section {
+  height: 80vh;
+  position: relative;
+}
+.message-section__content {
+  height: 100%;
+}
+.received {
+  text-align: left;
+}
+.sent {
+  text-align: right;
+}
+.sender {
+  font-size: 10px;
+  margin-bottom: 10px;
+}
+.received__content,
+.sent__content {
+  display: inline-block;
+  width: auto;
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 4px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+}
+
+.received__content {
+  background-color: #fff;
+}
+.sent__content {
+  background-color: #ececec;
+}
+
+.input-box {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+.input-form {
+  background-color: #fff;
+  border-radius: 25px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 4px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+}
+.input-message {
+  width: 100%;
+  padding: 6px 14px;
+  border: none;
+  outline: none;
+}
+.input-submit-btn {
+  border: none;
+  background-color: transparent;
+}
+.input-submit-btn i {
+  font-size: 22px;
+}
+
+.chat-right__content {
+  width: 100%;
+  height: 100%;
+}
+
+.profile-container {
+  width: 150px;
+  height: 150px;
+  background-color: #f1f1f1;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.profile-image {
+  width: 100%;
+  height: 100%;
+}
+.chat-right__utils {
+  height: 58vh;
+}
+.chat-right__utils_container {
+  width: 100%;
+  height: 100%;
+  border: 2px solid #e1e1e1;
+  border-radius: 8px;
+}
+
+.room-item {
+  background-color: #ececec;
+  border-radius: 8px;
+}
+
+.room-item-content p {
+  color: #7b7b7b;
 }
