--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,12 +11,13 @@
   width: 100%;
   height: 100vh;
   color: var(--color-black);
+  background-image: url('./assets/bg.png');
 }
 
 .glass {
   height: 100vh;
   width: 100%;
-  background: linear-gradient(65deg, rgba(0, 0, 0, 0.519), #333 65%);
+  background: linear-gradient(65deg, rgba(0, 0, 0, 0), rgb(0, 0, 0) 65%);
   backdrop-filter: blur(40px);
   -webkit-backdrop-filter: blur(10px);
 }
@@ -25,9 +26,9 @@
 .home {
   width: 100%;
   margin: 0 auto;
-  background-image: url('./assets/bg.png');
   height: 100%;
 }
+
 .left {
   width: 50%;
   height: 100%;
@@ -40,7 +41,27 @@
 /* left */
 
 .form {
-  padding: 20px;
+  padding: 20px 0px 20px 0px;
+  width: 40%;
+  text-align: center;
+  background-color: #e1e1e11e;
+  border-radius: .8em;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-item {
+  width: 100%;
+}
+
+.form-item input, button{
+  padding: 10px;
+  margin-bottom: 20px;
+  width: 80%;
 }
 
 .form-heading {
@@ -48,28 +69,39 @@
   color: var(--color-white);
   margin-bottom: 25px;
 }
+
 .form-input{
-  width: 100%;
-  padding: 12px 15px;
   border: none;
   background-color: #f1f1f1;
   border-radius: 6px;
-  margin-bottom: 15px;
   outline: none;
+  text-align: center;
+  opacity: .7;
 }
+
 .form-input:last-child {
   margin-bottom: 20px;
+  
 }
-.form-submit-btn {
-  width: 100%;
-  padding: 12px 15px;
-  font-size: 22px;
+
+.form-submit-btn, .form-join-btn {
   border: none;
-  background-color: #f1f1f1;
-  color: #333;
+  background-color: #e86b59;
+  color: #e1e1e1;
   border-radius: 6px;
 }
-.join {
+
+.form-join-btn {
+  background-color: #21a168;
+}
+
+.or-label {
+  color: #e1e1e1;
+  margin-bottom: 20px;
+  opacity: .7;
+}
+
+/* .join {
   margin-top: 12px;
   font-size: 15px;
   color: #f1f1f1;
@@ -80,11 +112,11 @@
 }
 .join-span a {
   text-decoration: none;
-}
+} */
 
 /* right */
 
-.logo-container {
+/* .logo-container {
   height: 100%;
   padding: 40px 0;
 }
@@ -103,7 +135,7 @@
 .rocket-img {
   width: 300px;
   transform: rotateZ(-45deg);
-}
+} */
 
 
 
