--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,13 +12,14 @@
   height: 100vh;
   color: var(--color-black);
   background-image: url('./assets/bg.png');
+  
 }
 
 .glass {
   height: 100vh;
   width: 100%;
-  background: linear-gradient(65deg, rgba(0, 0, 0, 0), rgb(0, 0, 0) 65%);
-  backdrop-filter: blur(40px);
+  background: linear-gradient(65deg, rgba(0, 0, 0, 0), #000000 65%);
+  backdrop-filter: blur(70px);
   -webkit-backdrop-filter: blur(10px);
 }
 
@@ -27,6 +28,7 @@
   width: 100%;
   margin: 0 auto;
   height: 100%;
+  background-color: white;
 }
 
 .left {
@@ -127,18 +129,19 @@ form {
 .logo {
   padding: 20px 0;
   color: #f1f1f1;
-}
-.rocket-container {
-  height: 100%;
-  padding-top: 85px;
-}
-.rocket-img {
-  width: 300px;
-  transform: rotateZ(-45deg);
 } */
 
-
-
+.rocket-container {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.rocket-img {
+  height: 70%;
+  opacity: .7;
+  border-radius: 1em;
+}
 
 /* Chat */
 .chat-section {
